# irc7-sspi

./: .gitignore  Cargo.toml  README-SKY.md  README.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: publish-nuget.yml
docs/: gatekeeper_sspi_documentation.md
examples/c#/ConsoleApp1/: ConsoleApp1.csproj  Program.cs
examples/c#/ConsoleApp1/Interop/: ArrayBufferWriterExtensions.cs  SspiHelpers.cs
examples/c#/ConsoleApp1/Native/: IrcxSspiModule.cs  IrcxSspiNative.cs
examples/c#/ConsoleApp1/Server/: IrcxAuthServer.cs
interop/IrcxSspi.Native/: IrcxSspi.Native.csproj  IrcxSspiNative.cs  SspiHelpers.cs
scripts/ci/: build-native.sh  pack-nuget.sh  publish-nuget.sh  read-version.py  stage-native-unix.sh  stage-native-windows.ps1
src/: default.rs  dll.rs  gatekeeper.rs  gatekeeper_passport.rs  lib.rs  main.rs  ntlm.rs  ntlm_passport.rs  passport.rs  types.rs  vault.rs
