[package]
name = "ircx-sspi"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "ircx-sspi-test"
path = "src/main.rs"

[[bin]]
name = "ircx-sspi-server"
path = "src/bin/server.rs"

[[bin]]
name = "ircx-sspi-gui"
path = "src/bin/gui.rs"

[dependencies]
md-5 = "0.10.6"
hmac = "0.12.1"
md4 = "0.10.2"
sspi = "0.21.0"
aes-gcm = "0.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zeroize = { version = "1.8.1", features = ["derive"] }
hex = "0.4.3"
getrandom = { version = "0.2", features = ["js"] }
eframe = "0.27.2"


